<resources>
    <string name="app_name">Firebase Application</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="go_to_register">Go to register</string>
    <string name="you_are_logged_in">You are logged in!!!!!</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="register">REGISTER</string>
    <string name="go_to_login">Go to login</string>
</resources>